src/views/snapshots/hn__views__context_menu__tests__context_menu_selection.snap
---
source: src/views/context_menu.rs
expression: output
---









                      ┌Actions──────────────────────────┐
                      │  go to user profile             │
                      │> filter by this user            │
                      │  filter by this domain          │
                      └─────────────────────────────────┘
                      j/k:select  Enter:confirm  Esc:canc
