src/views/snapshots/hn__views__context_menu__tests__context_menu_self_post_hides_domain_filter.snap
---
source: src/views/context_menu.rs
expression: output
---









                      ┌Actions──────────────────────────┐
                      │> go to user profile             │
                      │  filter by this user            │
                      └─────────────────────────────────┘
                      j/k:select  Enter:confirm  Esc:canc
